[FEATURE] Add Vimeo handler

--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -9,6 +9,9 @@
             <trans-unit id="youtube_notice">
                 <source><![CDATA[This is a YouTube video. If you click on this video you agree to the <a href="https://policies.google.com/privacy?hl=en" target="_blank">privacy &amp; terms</a> of Google and you also agree to our %s.]]></source>
             </trans-unit>
+            <trans-unit id="vimeo_notice">
+                <source><![CDATA[This is a Vimeo Video. If you click on this video you agree to the <a href="https://vimeo.com/cookie_policy" target="_blank">cookie policy</a> of Vimeo and you also agree to our %s.]]></source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
