--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -9,6 +9,9 @@
             <trans-unit id="youtube_notice">
                 <target><![CDATA[Dies ist ein YouTube Video. Wenn Sie auf dieses Video klicken, stimmen Sie der <a href="https://policies.google.com/privacy?hl=de" target="_blank">Datenschutzerklärung & Nutzungsbedingungen</a> von Google zu. Außerdem zustimmen Sie unserer %s zu.]]></target>
             </trans-unit>
+            <trans-unit id="vimeo_notice">
+                <target><![CDATA[Dies ist ein Vimeo Video. Wenn Sie auf dieses Video klicken, stimmen Sie der <a href="https://vimeo.com/cookie_policy" target="_blank">Cookie-Richtlinie</a> von Vimeo zu. Außerdem zustimmen Sie unserer %s zu.]]></target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
