--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -15,6 +15,9 @@
             <trans-unit id="google_maps_notice">
                 <target><![CDATA[Dies ist eine Google Maps Karte. Wenn Sie auf diese Karte klicken, stimmen Sie der <a href="https://policies.google.com/privacy?hl=de-DE" target="_blank">Datenschutzerklärung</a> von Google zu. Außerdem stimmen Sie unserer %s zu.]]></target>
             </trans-unit>
+            <trans-unit id="osm_notice">
+                <target><![CDATA[Dies ist eine OpenStreetMap Karte. Wenn Sie auf diese Karte klicken, stimmen Sie der <a href="https://wiki.osmfoundation.org/wiki/Privacy_Policy" target="_blank">Datenschutzerklärung</a> der OpenStreetMap Foundation (OSMF) zu. Außerdem stimmen Sie unserer %s zu.]]></target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
