--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -15,6 +15,9 @@
             <trans-unit id="google_maps_notice">
                 <source><![CDATA[This is a Google Map map. If you click on this map you agree to the <a href="https://policies.google.com/privacy?hl=en-US" target="_blank">privacy policy</a> of Google and you also agree to our %s.]]></source>
             </trans-unit>
+            <trans-unit id="osm_notice">
+                <source><![CDATA[This is an OpenStreetMap map. If you click on this map you agree to the <a href="https://wiki.osmfoundation.org/wiki/Privacy_Policy" target="_blank">Privacy Policy</a> of the OpenStreetMap Foundation (OSMF) and you also agree to our %s.]]></source>
+            </trans-unit>
         </body>
     </file>
 </xliff>
