--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -18,6 +18,20 @@
             <trans-unit id="osm_notice">
                 <source><![CDATA[This is an OpenStreetMap map. If you click on this map you agree to the <a href="https://wiki.osmfoundation.org/wiki/Privacy_Policy" target="_blank">Privacy Policy</a> of the OpenStreetMap Foundation (OSMF) and you also agree to our %s.]]></source>
             </trans-unit>
+
+			<!-- A11Y -->
+			<trans-unit id="youtube_aria-label">
+				<source>load Youtube video</source>
+			</trans-unit>
+			<trans-unit id="vimeo_aria-label">
+				<source>load Vimeo video</source>
+			</trans-unit>
+			<trans-unit id="google-maps_aria-label">
+				<source>load Google Map</source>
+			</trans-unit>
+			<trans-unit id="osm_aria-label">
+				<source>load OpenStreetMap</source>
+			</trans-unit>
         </body>
     </file>
 </xliff>
