--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2024-05-28         [RELEASE] Release of social_gdpr 3.3.0 (Nicole Cordes)
+2024-05-28 65d571d [TASK] Fix extension status badges in README.md (Nicole Cordes)
+2024-05-28 dd588f3 [BUGFIX] Fix CI pipeline (Nicole Cordes)
+2024-05-19 bc09bde [FEATURE] Add EventListener for TYPO3 12.4 (Nicole Cordes)
+2023-06-23 a7de34c Fix cgl (Nikita Hovratov)
+2023-06-23 7003e8f Fix cgl (Nikita Hovratov)
+2023-06-23 fe0125f Generalize preview image flushing (Nikita Hovratov)
+2023-06-22 14bee13 Fix style CI (Nikita Hovratov)
+2023-06-22 85db0ae [FEATURE] Add flush preview image button (Nikita Hovratov)
+2024-05-18 a535b2a [BUGFIX] Fix CI pipeline (Nicole Cordes)
+2024-05-18 97deed5 [BUGFIX] Ensure correct compatibility for non-composer installtions (Nicole Cordes)
+2024-04-29 650764d [TASK] Raise compatibility to TYPO3 12.4 (Nicole Cordes)
+2024-04-29 fef1a62 [BUGFIX] Fix StyleCI configuration (Nicole Cordes)
+2024-04-29 5566e6a [TASK] Migrate CI workflow to GitHub Actions (Nicole Cordes)
+2023-02-01 e5ab427 Update tt_content.php (Stephan Kleiber)
+2023-01-23 be388a2 [TASK] Raise compatibility to TYPO3 12.1 (Nicole Cordes)
+2023-01-23 61fbeda [BUGFIX] Use Node.js LTS for SonarQube Scanner (Nicole Cordes)
+2023-01-22 6ed7716 [TASK] Migrate to typo3/testing-framework 6.x (Nicole Cordes)
+
 2022-04-25         [RELEASE] Release of social_gdpr 3.2.0 (Nicole Cordes)
 2022-04-25 70f524c [TASK] Add compatibility to PHP 8.1 (Nicole Cordes)
 2022-04-25 e4d174a [FEATURE] Add compatibility to TYPO3 11.5 (Nicole Cordes)
